@@ -20,6 +20,8 @@ unity (7.4.0+16.04.20160801.2-0ubuntu2) UNRELEASED; urgency=medium
   * DecoratedWindow: display unmaximize button if the window is
     vertically or horizontally maximized (LP: #1608480)
   * DecorationsForceQuitDialog: make CSS selectors work with gtk 3.20
+  * UserAuthenticatorPam: ensure pam_handle_ is null initialized and
+    don't proceed if not set (LP: #1611668)
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 23 Aug 2016 17:00:35 +0200
 
